--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
 
     <!--FIRST SECTION-->
     <section class="features">
+      <div>
+        <svg class="" width="64" height="64">
+          <use href="./images/icons/icons.svg#icon-antenna"></use>
+        </svg>
+        <svg class="" width="64" height="64">
+          <use href="./images/icons/icons.svg#icon-clock"></use>
+        </svg>
+        <svg class="" width="64" height="64">
+          <use href="./images/icons/icons.svg#icon-diagram"></use>
+        </svg>
+        <svg class="" width="64" height="64">
+          <use href="./images/icons/icons.svg#icon-astronaut"></use>
+        </svg>
+      </div>
       <div class="section-container container">
         <h2 class="visually-hidden">Features</h2>
         <ul class="features-list list">
@@ -106,6 +120,20 @@
               <h3 class="about-list-link">Mark Guerrero</h3>
               <p class="text">Product Designer</p>
             </div>
+              <div>
+                <svg class="" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+                <svg class="" width="24" height="24">
+                  <use href="/images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+                <svg class="" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+                <svg class="" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </div>
           </li>
 
           <li class="image-item-list">
@@ -114,6 +142,21 @@
               <h3 class="about-list-link">Tom Ford</h3>
               <p class="text">Frontend Developer</p>
             </div>
+                <div>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="/images/icons/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+            
           </li>
 
           <li class="image-item-list">
@@ -123,6 +166,20 @@
               <h3 class="about-list-link">Camila Garcia</h3>
               <p class="text">Marketing</p>
             </div>
+                <div>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="/images/icons/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
           </li>
 
           <li class="image-item-list">
@@ -132,6 +189,20 @@
               <h3 class="about-list-link">Daniel Wilson</h3>
               <p class="text">UI Designer</p>
             </div>
+                <div>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="/images/icons/icons.svg#icon-twitter"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  </svg>
+                  <svg class="" width="24" height="24">
+                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
           </li>
         </ul>
       </div>
@@ -209,6 +280,21 @@
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
+    </div>
+    <div>
+      <h2>Social media</h2>
+      <svg class="" width="40" height="40">
+        <use href="./images/icons/icons.svg#icon-instagram"></use>
+      </svg>
+      <svg class="" width="40" height="40">
+        <use href="/images/icons/icons.svg#icon-twitter"></use>
+      </svg>
+      <svg class="" width="40" height="40">
+        <use href="./images/icons/icons.svg#icon-facebook"></use>
+      </svg>
+      <svg class="" width="40" height="40">
+        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+      </svg>
     </div>
   </footer>
 </body>
