--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
     <section class="features">
       <div>
         <svg class="" width="64" height="64">
-          <use href="./images/icons/icons.svg#icon-antenna"></use>
+          <use href="./images/icons.svg#icon-antenna"></use>
         </svg>
         <svg class="" width="64" height="64">
-          <use href="./images/icons/icons.svg#icon-clock"></use>
+          <use href="./images/icons.svg#icon-clock"></use>
         </svg>
         <svg class="" width="64" height="64">
-          <use href="./images/icons/icons.svg#icon-diagram"></use>
+          <use href="./images/icons.svg#icon-diagram"></use>
         </svg>
         <svg class="" width="64" height="64">
-          <use href="./images/icons/icons.svg#icon-astronaut"></use>
+          <use href="./images/icons.svg#icon-astronaut"></use>
         </svg>
       </div>
       <div class="section-container container">
@@ -122,16 +122,16 @@
             </div>
               <div>
                 <svg class="" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
                 <svg class="" width="24" height="24">
-                  <use href="/images/icons/icons.svg#icon-twitter"></use>
+                  <use href="/images/icons.svg#icon-twitter"></use>
                 </svg>
                 <svg class="" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 <svg class="" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
           </li>
@@ -144,16 +144,16 @@
             </div>
                 <div>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="/images/icons/icons.svg#icon-twitter"></use>
+                    <use href="/images/icons.svg#icon-twitter"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
             
@@ -168,16 +168,16 @@
             </div>
                 <div>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="/images/icons/icons.svg#icon-twitter"></use>
+                    <use href="/images/icons.svg#icon-twitter"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
           </li>
@@ -191,16 +191,16 @@
             </div>
                 <div>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="/images/icons/icons.svg#icon-twitter"></use>
+                    <use href="/images/icons.svg#icon-twitter"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                   <svg class="" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </div>
           </li>
@@ -284,16 +284,16 @@
     <div>
       <h2>Social media</h2>
       <svg class="" width="40" height="40">
-        <use href="./images/icons/icons.svg#icon-instagram"></use>
+        <use href="./images/icons.svg#icon-instagram"></use>
       </svg>
       <svg class="" width="40" height="40">
-        <use href="/images/icons/icons.svg#icon-twitter"></use>
+        <use href="/images/icons.svg#icon-twitter"></use>
       </svg>
       <svg class="" width="40" height="40">
-        <use href="./images/icons/icons.svg#icon-facebook"></use>
+        <use href="./images/icons.svg#icon-facebook"></use>
       </svg>
       <svg class="" width="40" height="40">
-        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+        <use href="./images/icons.svg#icon-linkedin"></use>
       </svg>
     </div>
   </footer>
