--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="./index.html" class="header-logo link">Web<span class="header-logo-part-dark">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
+            <a class="menu-link link current" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="">Portfolio</a>
@@ -55,20 +55,30 @@
 
     <!--FIRST SECTION-->
     <section class="features">
-      <div>
-        <svg class="" width="64" height="64">
-          <use href="./images/icons.svg#icon-antenna"></use>
-        </svg>
-        <svg class="" width="64" height="64">
-          <use href="./images/icons.svg#icon-clock"></use>
-        </svg>
-        <svg class="" width="64" height="64">
-          <use href="./images/icons.svg#icon-diagram"></use>
-        </svg>
-        <svg class="" width="64" height="64">
-          <use href="./images/icons.svg#icon-astronaut"></use>
-        </svg>
-      </div>
+          <div class="container-icon">
+            <ul>
+              <li>
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
       <div class="section-container container">
         <h2 class="visually-hidden">Features</h2>
         <ul class="features-list list">
