--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body class="body-container">
@@ -127,7 +127,7 @@
           <h2 class="teams-list">Our Team</h2>
           <ul class="list-img-list list">
             <li class="image-item-list">
-              <img class="images" src="./images/markguerrero.jpg" alt="Mark Guerrero. Product Designer." width="264" height="260"/>
+              <img class="images" src="./images/markguerrero.jpg" alt="Mark Guerrero. Product Designer." width="264" height="260">
                 <div class="img-container">
                    <h3 class="about-list-link">Mark Guerrero</h3>
                    <p class="text">Product Designer</p>
@@ -168,7 +168,7 @@
            </li>
 
              <li class="image-item-list">
-                 <img class="images" src="./images/tomford.jpg" alt="Tom Ford. Frontend Developer." width="264" height="260"/>
+                 <img class="images" src="./images/tomford.jpg" alt="Tom Ford. Frontend Developer." width="264" height="260">
               <div class="img-container">
                 <h3 class="about-list-link">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
@@ -208,7 +208,7 @@
             </li>
 
             <li class="image-item-list">
-              <img class="images" src="./images/camilagarcia.jpg" alt="Camila Garcia. Marketing." width="264" height="260"/>
+              <img class="images" src="./images/camilagarcia.jpg" alt="Camila Garcia. Marketing." width="264" height="260">
               <div class="img-container">
                 <h3 class="about-list-link">Camila Garcia</h3>
                 <p class="text">Marketing</p>
@@ -249,7 +249,7 @@
             </li>
 
             <li class="image-item-list">
-              <img class="images"src="./images/danielwilson.jpg" alt="Daniel Wilson. UI Designer." width="264" height="260"/>
+              <img class="images" src="./images/danielwilson.jpg" alt="Daniel Wilson. UI Designer." width="264" height="260">
               <div class="img-container">
                 <h3 class="about-list-link">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
@@ -285,11 +285,12 @@
                        <use href="./images/icons.svg#icon-linkedin"></use>
                      </svg>
                     </a>
-                  </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+                 </li>
+               </ul>
+             </div>
+           </li>
+         </ul>
+       </div>
       </section>
 
       <!--THIRD SECTION-->
@@ -298,13 +299,7 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list list">
             <li class="list-service link">
-              <img
-                class="project-link link"
-                src="./images/row1/banking-app-interface-concept.jpg"
-                alt="Project 1"
-                width="360"
-                height="300"
-              />
+              <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360" height="300">
               <div class="service-container">
                 <h3 class="description-title">Banking App</h3>
                 <p class="portfolio-desk">App</p>
@@ -312,13 +307,8 @@
             </li>
 
             <li class="list-service link">
-              <img
-                class="project-link link"
-                src="./images/row1/cashless-payment.jpg"
-                alt="Project 2"
-                width="360"
-                height="300"
-              />
+              <img class="project-link link"
+                src="./images/row1/cashless-payment.jpg" alt="Project 2" width="360" height="300">
               <div class="service-container">
                 <h3 class="description-title">Cashless Payment</h3>
                 <p class="portfolio-desk">Marketing</p>
@@ -326,13 +316,7 @@
             </li>
 
             <li class="list-service link">
-              <img
-                class="project-link link"
-                src="./images/row1/meditation-app.jpg"
-                alt="Project 3"
-                width="360"
-                height="300"
-              />
+              <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
               <div class="service-container">
                 <h3 class="description-title">Meditation App</h3>
                 <p class="portfolio-desk">App</p>
@@ -340,13 +324,7 @@
             </li>
 
             <li class="list-service link">
-              <img
-                class="project-link link"
-                src="./images/row2/taxi-service.jpg"
-                alt="Project 4"
-                width="360"
-                height="300"
-              />
+              <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
               <div class="service-container">
                 <h3 class="description-title">Taxi Service</h3>
                 <p class="portfolio-desk">Marketing</p>
@@ -354,13 +332,7 @@
             </li>
 
             <li class="list-service link">
-              <img
-                class="project-link link"
-                src="./images/row2/screen-illustrations.jpg"
-                alt="Project 5"
-                width="360"
-                height="300"
-              />
+              <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
               <div class="service-container">
                 <h3 class="description-title">Screen Illustrations</h3>
                 <p class="portfolio-desk">Design</p>
@@ -368,13 +340,7 @@
             </li>
 
             <li class="list-service link">
-              <img
-                class="project-link link"
-                src="./images/row2/online-courses.jpg"
-                alt="Project 6"
-                width="360"
-                height="300"
-              />
+              <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
               <div class="service-container">
                 <h3 class="description-title">Online Courses</h3>
                 <p class="portfolio-desk">Marketing</p>
