--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <li class="social-icon list">
                     <a href="" class="social-group">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                  </li>         
@@ -224,7 +224,7 @@
                  <li class="social-icon list">
                    <a href="" class="social-group">
                      <svg class="social-list-icon" width="16" height="16">
-                       <use href="/images/icons.svg#icon-twitter"></use>
+                       <use href="./images/icons.svg#icon-twitter"></use>
                      </svg>
                    </a>
                  </li>
@@ -266,7 +266,7 @@
                   <li class="social-icon list">
                     <a href="" class="social-group">
                      <svg class="social-list-icon" width="16" height="16">
-                       <use href="/images/icons.svg#icon-twitter"></use>
+                       <use href="./images/icons.svg#icon-twitter"></use>
                      </svg>
                     </a>
                   </li>
@@ -299,7 +299,12 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list list">
             <li class="list-service link">
-              <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360" height="300">
+              <div class="portfolio-img-container">
+                <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360"
+                height="300">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                 Cloud Storage App</p>
+              </div>
               <div class="service-container">
                 <h3 class="description-title">Banking App</h3>
                 <p class="portfolio-desk">App</p>
@@ -307,8 +312,11 @@
             </li>
 
             <li class="list-service link">
-              <img class="project-link link"
-                src="./images/row1/cashless-payment.jpg" alt="Project 2" width="360" height="300">
+              <div class="portfolio-img-container">
+                <img class="project-link link" src="./images/row1/cashless-payment.jpg" alt="Project 2" width="360" height="300">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · ExoticFruit Ecommerce App ·
+                 Cloud Storage App</p>
+              </div>
               <div class="service-container">
                 <h3 class="description-title">Cashless Payment</h3>
                 <p class="portfolio-desk">Marketing</p>
@@ -316,7 +324,12 @@
             </li>
 
             <li class="list-service link">
-              <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
+              <div class="portfolio-img-container">
+                <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                  ExoticFruit Ecommerce App ·
+                  Cloud Storage App</p>
+              </div>
               <div class="service-container">
                 <h3 class="description-title">Meditation App</h3>
                 <p class="portfolio-desk">App</p>
@@ -324,7 +337,11 @@
             </li>
 
             <li class="list-service link">
-              <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
+              <div class="portfolio-img-container">
+                <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·ExoticFruit Ecommerce App ·
+                 Cloud Storage App</p>
+              </div>
               <div class="service-container">
                 <h3 class="description-title">Taxi Service</h3>
                 <p class="portfolio-desk">Marketing</p>
@@ -332,7 +349,11 @@
             </li>
 
             <li class="list-service link">
-              <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
+              <div class="portfolio-img-container">
+                <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·ExoticFruit Ecommerce App ·
+                 Cloud Storage App</p>
+              </div>
               <div class="service-container">
                 <h3 class="description-title">Screen Illustrations</h3>
                 <p class="portfolio-desk">Design</p>
@@ -340,7 +361,11 @@
             </li>
 
             <li class="list-service link">
-              <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
+              <div>
+                <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·ExoticFruit Ecommerce App ·
+                 Cloud Storage App</p>
+              </div>
               <div class="service-container">
                 <h3 class="description-title">Online Courses</h3>
                 <p class="portfolio-desk">Marketing</p>
