--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <div class="container-header container">
         <nav class="page-navigation list">
           <a href="./index.html" class="header-logo link"
-            >Web<span class="header-logo-part-dark">Studio</span></a
-          >
+            >Web<span class="header-logo-part-dark">Studio</span></a>
           <ul class="menu list">
             <li class="menu-item">
               <a class="menu-link link current" href="./index.html">Studio</a>
