--- a/index.html
+++ b/index.html
@@ -299,8 +299,7 @@
           <ul class="portfolio-list list">
             <li class="list-service link">
               <div class="portfolio-img-container">
-                <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360"
-                height="300">
+                <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360" height="300">
                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                  Cloud Storage App</p>
               </div>
@@ -313,7 +312,7 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row1/cashless-payment.jpg" alt="Project 2" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · ExoticFruit Ecommerce App ·
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                  Cloud Storage App</p>
               </div>
               <div class="service-container">
@@ -338,7 +337,7 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·ExoticFruit Ecommerce App ·
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·Exotic Fruit Ecommerce App ·
                  Cloud Storage App</p>
               </div>
               <div class="service-container">
@@ -350,7 +349,7 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·ExoticFruit Ecommerce App ·
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App ·
                  Cloud Storage App</p>
               </div>
               <div class="service-container">
@@ -360,9 +359,9 @@
             </li>
 
             <li class="list-service link">
-              <div>
+              <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·ExoticFruit Ecommerce App ·
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App ·
                  Cloud Storage App</p>
               </div>
               <div class="service-container">
