--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                       <li class="social-icon list">
                         <a href="" class="social-group">
                           <svg class="social-list-icon" width="16" height="16">
-                           <use href="/images/icons.svg#icon-twitter"></use>
+                           <use href="./images/icons.svg#icon-twitter"></use>
                           </svg>
                         </a>
                       </li>
