--- a/index.html
+++ b/index.html
@@ -300,8 +300,9 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row1/banking-app-interface-concept.jpg" alt="Project 1" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                 Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="service-container">
                 <h3 class="description-title">Banking App</h3>
@@ -312,8 +313,9 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row1/cashless-payment.jpg" alt="Project 2" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                 Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="service-container">
                 <h3 class="description-title">Cashless Payment</h3>
@@ -324,9 +326,9 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row1/meditation-app.jpg" alt="Project 3" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                  ExoticFruit Ecommerce App ·
-                  Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · ExoticFruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="service-container">
                 <h3 class="description-title">Meditation App</h3>
@@ -337,8 +339,9 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/taxi-service.jpg" alt="Project 4" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·Exotic Fruit Ecommerce App ·
-                 Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="service-container">
                 <h3 class="description-title">Taxi Service</h3>
@@ -349,8 +352,9 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/screen-illustrations.jpg" alt="Project 5" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App ·
-                 Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="service-container">
                 <h3 class="description-title">Screen Illustrations</h3>
@@ -361,8 +365,9 @@
             <li class="list-service link">
               <div class="portfolio-img-container">
                 <img class="project-link link" src="./images/row2/online-courses.jpg" alt="Project 6" width="360" height="300">
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App ·
-                 Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App·Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
               <div class="service-container">
                 <h3 class="description-title">Online Courses</h3>
