--- a/index.html
+++ b/index.html
@@ -382,28 +382,53 @@
     <!--FOOTER-->
     <footer class="footer-container-link">
       <div class="footer-container container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-logo-part-light">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
-      </div>
-      <div>
-        <h2>Social media</h2>
-        <svg class="" width="40" height="40">
-          <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-        <svg class="" width="40" height="40">
-          <use href="/images/icons.svg#icon-twitter"></use>
-        </svg>
-        <svg class="" width="40" height="40">
-          <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-        <svg class="" width="40" height="40">
-          <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
+        <div class="footer-contant">
+         <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part-light">Studio</span></a>
+         <p class="text-footer">
+           Increase the flow of customers and sales for your business with digital marketing & growth
+           solutions.
+         </p>
+        </div>
+        <div class="social-media-container">
+         <p class="social-media-text">Social media</p>
+         <ul class="list-media">
+           <li class="list-social-media"> 
+             <a href="" class="footer-media-item">
+               <svg class="" width="24" height="24">
+                 <use href="./images/icons.svg#icon-instagram"></use>
+               </svg>
+             </a>
+           </li>
+           <li class="list-social-media">
+              <a>
+                <svg class="social-list-icon" width="24" height="24">
+                 <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+           </li>
+           <li class="list-social-media">
+             <a href="" class="footer-media-item">
+                <svg class="social-list-icon" width="24" height="24">
+                 <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-social-media">
+              <a href="" class="footer-media-item">
+                <svg class="social-list-icon" width="24" height="24">
+                 <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-social-media">
+              <a href="" class="footer-media-item">
+                <svg class="social-list-icon" width="24" height="24">
+                 <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+             </a>
+            </li>
+         </ul>
+        </div>
       </div>
     </footer>
   </body>
