--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <!--FOOTER-->
     <footer class="footer-container-link">
       <div class="footer-container container">
-        <div class="footer-contant">
+        <div class="footer-content">
          <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part-light">Studio</span></a>
          <p class="text-footer">
            Increase the flow of customers and sales for your business with digital marketing & growth
@@ -394,7 +394,7 @@
          <ul class="list-media">
            <li class="list-social-media"> 
              <a href="" class="footer-media-item">
-               <svg class="" width="24" height="24">
+               <svg class="social-list-icon" width="24" height="24">
                  <use href="./images/icons.svg#icon-instagram"></use>
                </svg>
              </a>
